--- a/vacuna.css
+++ b/vacuna.css
@@ -518,7 +518,7 @@ a:hover{
         }
         
 
-         summary.TituloD1::before{
+        summary.TituloD1::before{
             right: -570px;
             position: relative;
             top: 8px;
@@ -604,7 +604,7 @@ a:hover{
         img.Mujer_Dedo{
             
             height: 700px;
-            width: 760px;
+            width: 960px;
             margin-top: 437px;
             position: absolute;
             right: 630px;
@@ -626,19 +626,134 @@ a:hover{
         }
 
     /* Emergenci Contact */
-        
-        
-        
-
-
-        
-
-
-
-
-
     
-    
+        .Contenedor{
+            width: 290px;
+            height: 70vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 1100px;
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
+
+        .Tarjeta{
+            width: 100%;
+            margin: 20px;
+            border-radius: 6px;
+            overflow: hidden;
+            background-color: white;
+            box-shadow: 0px 1px 10px rgba(0, 0, 200, 0.2);
+            cursor: default;
+            transition: all 400ms ease;
+
+        }
+
+        .Tarjeta:hover{
+            box-shadow: 5px 5px 20px rgba(0, 0, 400, 0.4);
+            transform: translateY(-3%);
+        }
+
+        .Tarjeta img{
+            width: 59px;
+            height: 56px;
+            display: inline;
+            top: 5px;
+            position: relative;
+        }
+
+         .Tarjeta .Contenido h3{
+            right: -63px;
+            top: -74px;
+            position: relative;
+            color: #1F3E72;
+            font-size: 22px;
+            
+        }
+
+         .Tarjeta .Contenido p{
+             color: #6D7B93;
+             font-size: 15px;
+             position: relative;
+             right: -63px;
+             top: -95px;
+         }
+
+         .Tarjeta .Contenido button{
+            font-weight: bold;
+            font-size: 15px;
+            display: inline;
+            text-align: right;
+            color: #1F3E72;
+            background-color: #F1F5FF;
+            border-radius: 4px;
+            text-decoration: none;
+            padding: 14px 53px;
+            border-bottom: hidden;
+            border-color: #F1F5FF;
+            position: relative;
+            top: -55px;
+            right: -5px;
+         }
+
+         .Tarjeta .Contenido button:hover{
+            font-weight: bold;
+            font-size: 15px;
+            display: inline;
+            text-align: right;
+            color: white;
+            background-color: #2D4DCB;
+            border-radius: 4px;
+            text-decoration: none;
+            padding: 14px 53px;
+            border-bottom: hidden;
+            border-color: #2D4DCB;
+            position: relative;
+            top: -55px;
+            right: -5px;
+        }
+
+         section.Call{
+             margin-top: -20px;
+             position: relative;
+         }
+
+         section.Chat{
+            margin-top: -477px;
+            margin-right: 500px;
+            right: -330px;
+            position: relative;
+        }
+
+        section.Video{
+            margin-top: -180px;
+            right: 15px;
+            position: relative;
+        }
+
+        section.Message{
+            margin-top: -487px;
+            right: -335px;
+            position: relative;
+        }
+
+        #Video{
+            padding: 14px 30px;
+        }
+
+        #Messaje{
+            padding: 14px 35px;
+        }
+
+
+
+       
+
+
+        
+        
 
 
 
